--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -19,6 +19,7 @@ RUN npm ci
 
 COPY web/ ./
 RUN npm run build
+RUN apk add --no-cache curl
 
 # ──────────────────────────────────────────────────────────────
 # Runtime Stage (Nginx)
