--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -64,7 +64,7 @@ COPY --from=backend-builder /app/nofx .
 
 EXPOSE 8080
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/api/health || exit 1
+#HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+#  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/api/health || exit 1
 
 CMD ["./nofx"]
